apps/prometheus-stack/resources/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-coredns-metrics
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus-stack
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - protocol: TCP
              port: "9153"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana-metrics
  namespace: prometheus-stack
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - protocol: TCP
              port: "3000"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-state-metrics
  namespace: prometheus-stack
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - protocol: TCP
              port: "8080"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-from-grafana
  namespace: prometheus-stack
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - protocol: TCP
              port: "9090"
